--- a/project/source/templates/home.html
+++ b/project/source/templates/home.html
@@ -15,6 +15,10 @@
             text-align: center;
         }
 
+        button {
+            border-radius: 3px;
+        }
+
         .upload {
             padding: 0px 0px 0px 165px;
         }
@@ -88,6 +92,7 @@
             alert("File must be a .txt file");
             return;
         }
+
             document.getElementById("filename").innerHTML = "Filename: " + file.name;
             document.getElementById("filetype").innerHTML = "Type: " + file.type;
             document.getElementById("filesize").innerHTML = "Size: " + file.size + " bytes";
