--- a/project/source/templates/home.html
+++ b/project/source/templates/home.html
@@ -45,7 +45,10 @@
         <input type="file" id="textupload" class="upload">
         </br>
         </br>
-	    <button id="sendButton">Send</button>
+        <button id="sendButton">Send</button>
+        </br>
+        </br>
+        <a href="other.html">other page</a>
     </div>
         <p id="filename"></p>
         <p id="filetype"></p>
