Added another html page

--- a/project/source/templates/home.html
+++ b/project/source/templates/home.html
@@ -27,7 +27,7 @@
             display: none;
         }
 
-        .image {
+        img {
             display: block;
             margin-left: auto;
             margin-right: auto;
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <img src="https://www.playersguildofdearborn.org/wp-content/uploads/2012/03/Spamalot_glow.png" class="image"></img>
+    <img src="https://www.playersguildofdearborn.org/wp-content/uploads/2012/03/Spamalot_glow.png"></img>
     <h1>Spam Email Checker</h1>
     <p>This tool determines whether or not your email is considered spam. To check, upload a raw text file (with extension .txt) of the body of the email and click send.</p>
 
