--- a/project/source/templates/home.html
+++ b/project/source/templates/home.html
@@ -17,7 +17,8 @@
         <button id="sendButton">Send</button>
         </br>
         </br>
-        <a href="other.html">other page</a>
+        <a href="http://localhost:8080/templates/other.html">other page</a>
+        <img src="http://localhost:8080/monkey.jpg"></img>
     </div>
         <p id="filename"></p>
         <p id="filetype"></p>
