--- a/project/source/templates/other.html
+++ b/project/source/templates/other.html
@@ -1,5 +1,5 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Other Page</title>
