--- a/project/source/templates/home.html
+++ b/project/source/templates/home.html
@@ -9,7 +9,7 @@
     <img src="https://www.playersguildofdearborn.org/wp-content/uploads/2012/03/Spamalot_glow.png"></img>
     <h1>Spam Email Checker</h1>
     <p>This tool determines whether or not your email is considered spam. To check, upload a raw text file (with extension .txt) of the body of the email and click send.</p>
-
+    
     <div>
         <input type="file" id="textupload" class="upload">
         </br>
@@ -17,8 +17,8 @@
         <button id="sendButton">Send</button>
         </br>
         </br>
-        <a href="http://localhost:8080/templates/other.html">other page</a>
-        <img src="http://localhost:8080/monkey.jpg"></img>
+        <a href="/templates/other.html">other page</a>
+        <img src="/monkey.jpg"></img>
     </div>
         <p id="filename"></p>
         <p id="filetype"></p>
