--- a/project/source/templates/home.html
+++ b/project/source/templates/home.html
@@ -3,79 +3,22 @@
 <head> 
     <meta charset="UTF-8">
     <title>Application Home Page</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link rel="stylesheet" href="/static/css/home.css">
 </head>
-<!--<style>
-    .links {
-        background: gray;
-        /*display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 2px;
-        width: 5%;*/
-    }
-
-    .other {
-        color: blue;
-    }
-
-    .other1H {
-        visibility: hidden;
-    }
-
-    .other1V {
-        transition: all 2s ease;
-        visibility: visible;
-        background: darkgray;
-    }
-
-    .other2V {
-        visibility: visible;
-        background: darkgray;
-        transition: all 3s ease;
-    }
-</style>-->
 <body>
     <img src="https://www.playersguildofdearborn.org/wp-content/uploads/2012/03/Spamalot_glow.png"></img>
     <h1>Spam Email Checker</h1>
     <p>This tool determines whether or not your email is considered spam. To check, upload a raw text file (with extension .txt) of the body of the email and click send.</p>
-    
     <div>
-        <input type="file" id="textupload" class="upload">
+        <form id="upload-form" action="{{ url_for('..upload_upload') }}" method="POST" enctype="multipart/form-data">
+        <strong>Files:</strong><br>
+        <input id="file-picker" type="file" name="file" class="upload" accept="text/*" multiple>
+        <div id="msg"></div>
         </br>
-        </br>
-        <button id="sendButton">Send</button>
-        </br>
-        </br>
+        <input type="submit" value="Upload!" id="upload-button">
+        </form>
     </div>
-    <div class="links">
-        <a href="/templates/other.html" class="other" id="other0">other page</a>
-        </br>   
-        <a href="#" class="other1H" id="other1">Hello</a>
-        </br>
-        <a href="#" class="other1H" id="other2">World!</a>
-        </br>
-    </div>
-        <p id="filename"></p>
-        <p id="filetype"></p>
-        <p id="filesize"></p>
 </body>
 <script src="/static/js/home.js"></script>
-<!--<script>
-    var other = document.getElementById("other0");
-    other.addEventListener("mouseenter", changeFunc);
-    other.addEventListener("mouseleave", changeFunc2);
-
-    function changeFunc()
-    {
-        document.getElementById("other1").className = "other1V";
-        document.getElementById("other2").className = "other2V";
-
-    }
-    function changeFunc2()
-    {
-        document.getElementById("other1").className = "other1H";
-        document.getElementById("other2").className = "other1H";
-    }
-</script>-->
 </html>
