Added dataset link

--- a/project-code/templates/showModel.html
+++ b/project-code/templates/showModel.html
@@ -141,6 +141,11 @@
     
     <a class="link" href="http://localhost:{{port}}">Click Here</a>
     <a class="link"> to upload another file</a>
+    </br>
+    <a class="link" href="https://drive.google.com/drive/folders/1mf1cFerStGQ5dL2oUXJLFnWXCsk9cc0n?usp=sharing">
+        Click Here
+    </a>
+    <a class="link"> to look at and download the dataset we used.</a>
     
     </br>
     </br>
