--- a/project-code/templates/showModel.html
+++ b/project-code/templates/showModel.html
@@ -37,9 +37,15 @@
             border: 2px solid black;
             border-collapse: collapse;
         }
-        th,td {
+        td {
             padding: 15px;
             text-align: center;
+        }
+
+        th {
+            padding: 15px;
+            text-align: center;
+            background: white;
         }
         .header {
             background: lightslategray;
