--- a/project-code/templates/showModel.html
+++ b/project-code/templates/showModel.html
@@ -151,7 +151,7 @@
     <a class="link" href="https://drive.google.com/drive/folders/1mf1cFerStGQ5dL2oUXJLFnWXCsk9cc0n?usp=sharing">
         Click Here
     </a>
-    <a class="link"> to look at and download the dataset we used.</a>
+    <a class="link"> to view and download the dataset we used.</a>
     
     </br>
     </br>
