--- a/project-code/templates/home.html
+++ b/project-code/templates/home.html
@@ -43,8 +43,10 @@
     <img src="https://www.playersguildofdearborn.org/wp-content/uploads/2012/03/Spamalot_glow.png"></img>
     <p style="font-size: 75%"><i>This image is taken from https://www.playersguildofdearborn.org/about-us/past-show/spamalot/</i></p>
     <h1>Spam Email Checker</h1>
-    <p>This tool determines whether or not your email is considered spam. To check, upload a raw text file (with extension .txt) of the body of the email and click send.</p>
-    <p>NOTE: This tool will only except txt files</p>
+    <p>This tool determines whether or not your email is considered spam. 
+        To check, upload a raw text file (with extension .txt) of the 
+        body of the email and click upload.</p>
+    <p>NOTE: This tool will only except one txt file</p>
     <div>
         <form id="upload-form" action="{{ url_for('..py_scripts_gatherData_upload') }}" method="POST" enctype="multipart/form-data">
             <strong>File:</strong><br>
